TEIIDTOOLS-372: Adding the container memory sizes and new JVM options to control the JDK inside a container based on suggestions from core